# Open-Nazca

./: .env.example  .gitignore  ARCHITECTURE.md  CodeTester  CodeTester.py  DETECTORS_TECHNICAL_GUIDE.txt  LICENSE  OFFENSIVE_SECURITY_ANALYSIS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SNOWFLAKE_SETUP.md  SUMMARY.md  SampleTest.py  Test2.py  Test3_REMEDIATION_SUMMARY.md  Test3_remediated_secure.py  app.py  cli.py  conftest.py  pyproject.toml  requirements.txt  sabotage.py  setup.py  setup_snowflake.py  setup_snowflake_rag.py  setup_snowflake_schema.py  test3_remediation_check_output.txt
.streamlit/: config.toml
api/: main.py  requirements.txt
attack_simulator/: LLM_prompt_injection_testing.py  hardware_secrets_attack_sim.py  snowflake_attack_integration.py
config/: config.yaml  snowflake_schema.sql
defensiveAPI/: CICD_integration.py  builtin_security_tests.py  integrated_security_tester.py  integration_example.py  security_montitoring_alert_system.py  security_testing.py
docs/: ARCHITECTURE.md  DETECTORS_TECHNICAL_GUIDE.txt  FULL_PROGRAM_MAP.md  OFFENSIVE_SECURITY_ANALYSIS.md  README.md  SNOWFLAKE_SETUP.md
example1/: authorized_testing.py  disclosure.py  edu_secrets_setup.py  hacker_resources.py  hardware_secrets_test_case.py  prompt_injection_test_case.py
pages/: 01_Demo.py  02_About.py
practice/: enhanced_vulnerability_scanner.html  vulnerability_scanner.html
reports/: 708fcdb2-7023-44a2-a712-e6e1c7709230_20260322_121015.html  708fcdb2-7023-44a2-a712-e6e1c7709230_20260322_121015.json  708fcdb2-7023-44a2-a712-e6e1c7709230_20260322_121015.md  (+123 more)
(+162 files in other folders)
